worksブロック途中

--- a/index.html
+++ b/index.html
@@ -319,39 +319,72 @@
 
 			</div>
 
-			<ul>
-				<li class="bl_work_wrapper bl_work hp_shadow">
-					<div class="bl_work_info">
+			<ul class="bl_work_wrapper">
+				<li class="bl_work_inner bl_work hp_shadow modal">
+					<div class="bl_work_info modal">
 						<div class="bl_work_title">
 							TECHMEETS
 						</div><!-- /.bl_work_title -->
-						<p class="bl_work_desc modal">
-							TECHMEETSさんにいただいた画像カンプからコーディングしました。レスポンシブにも対応しています。
-						</p><!-- /.bl_work_desc -->
-						<ul class="bl_work_linkWrapper modal">
-							<li class="el_work_linkItem">
-								<a href="">
-									<i class="fab fa-github"></i>
-								</a>
-							</li><!-- /.el_work_linkItem -->
-							<li class="el_work_linkItem">
-								<a href="">
-									<i class="fas fa-external-link-alt"></i>
-								</a>
-							</li><!-- /.el_work_linkItem -->
-							<li class="el_work_linkItem">
-								<a href="">
-									<i class="fas fa-image"></i>
-								</a>
-							</li><!-- /.el_work_linkItem -->
-						</ul><!-- /.bl_work_linkWrapper -->
-					</div><!-- /.bl_work_info -->
+						<div class="bl_work_desc_wrapper modal hidden">
+							<p class="bl_work_desc">
+								TECHMEETSさんにいただいた画像カンプからコーディングしました。レスポンシブにも対応しています。
+							</p><!-- /.bl_work_desc -->
+							<ul class="bl_work_linkWrapper">
+								<li class="el_work_linkItem">
+									<a href="">
+										<i class="fab fa-github"></i>
+									</a>
+								</li><!-- /.el_work_linkItem -->
+								<li class="el_work_linkItem">
+									<a href="">
+										<i class="fas fa-external-link-alt"></i>
+									</a>
+								</li><!-- /.el_work_linkItem -->
+								<li class="el_work_linkItem">
+									<a href="">
+										<i class="fas fa-image"></i>
+									</a>
+								</li><!-- /.el_work_linkItem -->
+							</ul><!-- /.bl_work_linkWrapper -->
+						</div><!-- /.bl_work_info -->
+					</div><!-- /.modal-only -->
 
-						<figure class="bl_work_img">
-							<img src="./images/works/01-techmeets.jpg" alt="">
-						</figure><!-- /.bl_work_img -->
+					<figure class="bl_work_img">
+						<img src="./images/works/01-techmeets.jpg" alt="">
+					</figure><!-- /.bl_work_img -->
+				</li>
+				<li class="bl_work_wrapper bl_work hp_shadow modal">
+					<div class="bl_work_info modal">
+						<div class="bl_work_title">
+							TECHMEETS
+						</div><!-- /.bl_work_title -->
+						<div class="bl_work_desc_wrapper modal hidden">
+							<p class="bl_work_desc">
+								TECHMEETSさんにいただいた画像カンプからコーディングしました。レスポンシブにも対応しています。
+							</p><!-- /.bl_work_desc -->
+							<ul class="bl_work_linkWrapper">
+								<li class="el_work_linkItem">
+									<a href="">
+										<i class="fab fa-github"></i>
+									</a>
+								</li><!-- /.el_work_linkItem -->
+								<li class="el_work_linkItem">
+									<a href="">
+										<i class="fas fa-external-link-alt"></i>
+									</a>
+								</li><!-- /.el_work_linkItem -->
+								<li class="el_work_linkItem">
+									<a href="">
+										<i class="fas fa-image"></i>
+									</a>
+								</li><!-- /.el_work_linkItem -->
+							</ul><!-- /.bl_work_linkWrapper -->
+						</div><!-- /.bl_work_info -->
+					</div><!-- /.modal-only -->
 
-
+					<figure class="bl_work_img">
+						<img src="./images/works/01-techmeets.jpg" alt="">
+					</figure><!-- /.bl_work_img -->
 				</li>
 
 				<li class="bl_article bl_article_pfm">
