モーダル途中

--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
 						<div class="bl_work_title">
 							TECHMEETS
 						</div><!-- /.bl_work_title -->
-						<div class="bl_work_desc_wrapper hidden">
+						<div class="bl_work_desc_wrapper">
 							<p class="bl_work_desc">
 								TECHMEETSさんにいただいた画像カンプからコーディングしました。レスポンシブにも対応しています。
 							</p><!-- /.bl_work_desc -->
@@ -458,12 +458,12 @@
 					</figure><!-- /.bl_work_img -->
 				</li>
 
-				<li id="ytu" class="bl_work_inner bl_work hp_shadow ">
-					<div class="bl_work_info ">
+				<li id="ytu" class="bl_work_inner bl_work hp_shadow">
+					<div class="bl_work_info">
 						<div class="bl_work_title">
 							八尾市教職員組合
 						</div><!-- /.bl_work_title -->
-						<div class="bl_work_desc_wrapper  hidden">
+						<div class="bl_work_desc_wrapper">
 							<p class="bl_work_desc">
 								TECHMEETSさんにいただいた画像カンプからコーディングしました。レスポンシブにも対応しています。
 							</p><!-- /.bl_work_desc -->
