モーダルオープンJS１回目だめで、次はマウス座標取得から

--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
 		<section id="works" class="ly_cont">
 			<div class="ly_intro">
 				<div class="bl_heading">
-					<h2>実績</h2>
+					<h2 id="work-heading">実績</h2>
 				</div><!-- /.bl_heading -->
 				<div class="bl_description">
 					<p>
