一応できたけど、画面中央に表示できない

--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
 						<div class="bl_work_title">
 							学習に使えるリンク集
 						</div><!-- /.bl_work_title -->
-						<div class="bl_work_desc_wrapper  hidden">
+						<div class="bl_work_desc_wrapper">
 							<p class="bl_work_desc">
 								TECHMEETSさんにいただいた画像カンプからコーディングしました。レスポンシブにも対応しています。
 							</p><!-- /.bl_work_desc -->
@@ -397,7 +397,7 @@
 						<div class="bl_work_title">
 							学習につかえるリンク集２
 						</div><!-- /.bl_work_title -->
-						<div class="bl_work_desc_wrapper  hidden">
+						<div class="bl_work_desc_wrapper">
 							<p class="bl_work_desc">
 								TECHMEETSさんにいただいた画像カンプからコーディングしました。レスポンシブにも対応しています。
 							</p><!-- /.bl_work_desc -->
@@ -430,7 +430,7 @@
 						<div class="bl_work_title">
 							ぼちぼちブログ
 						</div><!-- /.bl_work_title -->
-						<div class="bl_work_desc_wrapper  hidden">
+						<div class="bl_work_desc_wrapper">
 							<p class="bl_work_desc">
 								TECHMEETSさんにいただいた画像カンプからコーディングしました。レスポンシブにも対応しています。
 							</p><!-- /.bl_work_desc -->
