--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 <body>
 
-	<header class="ly_header">
+	<header class="ly_header content-width">
 		<section class="ly_header_inner">
 			<figure class="el_headerLogo hp_shadow headerAnimate">
 				<img src="./images/WEBSON.png" alt="">
@@ -326,169 +326,182 @@
 
 			<ul id="work-list" class="bl_work_wrapper">
 
-				<li id="techmeets" class="bl_work_inner bl_work hp_shadow">
-					<div class="bl_work_info">
-						<div class="bl_work_title">
-							TECHMEETS
-						</div><!-- /.bl_work_title -->
-						<div class="bl_work_desc_wrapper">
-							<p class="bl_work_desc">
-								TECHMEETSさんにいただいた画像カンプからコーディングしました。レスポンシブにも対応しています。
-							</p><!-- /.bl_work_desc -->
-							<ul class="bl_work_linkWrapper">
-								<li class="el_work_linkItem">
-									<a href="">
-										<i class="fab fa-github"></i>
-									</a>
-								</li><!-- /.el_work_linkItem -->
-								<li class="el_work_linkItem">
-									<a href="">
-										<i class="fas fa-external-link-alt"></i>
-									</a>
-								</li><!-- /.el_work_linkItem -->
-								<li class="el_work_linkItem">
-									<a href="">
-										<i class="fas fa-image"></i>
-									</a>
-								</li><!-- /.el_work_linkItem -->
-							</ul><!-- /.bl_work_linkWrapper -->
-						</div><!-- /.bl_work_info -->
-					</div><!-- /.-only -->
-					<figure class="bl_work_img">
-						<img src="./images/works/01-techmeets.jpg" alt="">
-					</figure><!-- /.bl_work_img -->
+				<li id="techmeets" class="bl_work hp_shadow">
+					<div class="bl_work_inner">
+						<div class="bl_work_info">
+							<div class="bl_work_title">
+								TECHMEETS
+							</div><!-- /.bl_work_title -->
+							<div class="bl_work_desc_wrapper">
+								<p class="bl_work_desc">
+									TECHMEETSさんにいただいた画像カンプからコーディングしました。レスポンシブにも対応しています。
+								</p><!-- /.bl_work_desc -->
+								<ul class="bl_work_linkWrapper">
+									<li class="el_work_linkItem">
+										<a href="">
+											<i class="fab fa-github"></i>
+										</a>
+									</li><!-- /.el_work_linkItem -->
+									<li class="el_work_linkItem">
+										<a href="">
+											<i class="fas fa-external-link-alt"></i>
+										</a>
+									</li><!-- /.el_work_linkItem -->
+									<li class="el_work_linkItem">
+										<a href="">
+											<i class="fas fa-image"></i>
+										</a>
+									</li><!-- /.el_work_linkItem -->
+								</ul><!-- /.bl_work_linkWrapper -->
+							</div><!-- /.bl_work_info -->
+						</div><!-- /.-only -->
+						<figure class="bl_work_img">
+							<img src="./images/works/01-techmeets.jpg" alt="">
+						</figure><!-- /.bl_work_img -->
+						<div class="btn_close">
+							<button>閉じる</button>
+						</div><!-- /.btn_close -->
+					</div><!-- /.bl_work_inner -->
 				</li>
 
-				<li id="study-link01" class="bl_work_inner bl_work hp_shadow ">
-					<div class="bl_work_info ">
-						<div class="bl_work_title">
-							学習に使えるリンク集
-						</div><!-- /.bl_work_title -->
-						<div class="bl_work_desc_wrapper">
-							<p class="bl_work_desc">
-								TECHMEETSさんにいただいた画像カンプからコーディングしました。レスポンシブにも対応しています。
-							</p><!-- /.bl_work_desc -->
-							<ul class="bl_work_linkWrapper">
-								<li class="el_work_linkItem">
-									<a href="">
-										<i class="fab fa-github"></i>
-									</a>
-								</li><!-- /.el_work_linkItem -->
-								<li class="el_work_linkItem">
-									<a href="">
-										<i class="fas fa-external-link-alt"></i>
-									</a>
-								</li><!-- /.el_work_linkItem -->
-								<li class="el_work_linkItem">
-									<a href="">
-										<i class="fas fa-image"></i>
-									</a>
-								</li><!-- /.el_work_linkItem -->
-							</ul><!-- /.bl_work_linkWrapper -->
-						</div><!-- /.bl_work_info -->
-					</div><!-- /.-only -->
-					<figure class="bl_work_img ">
-						<img src="./images/works/02-takamina-link.jpg" alt="">
-					</figure><!-- /.bl_work_img -->
+				<li id="study-link01" class="bl_work hp_shadow ">
+					<div class="bl_work_inner">
+						<div class="bl_work_info ">
+							<div class="bl_work_title">
+								学習に使えるリンク集
+							</div><!-- /.bl_work_title -->
+							<div class="bl_work_desc_wrapper">
+								<p class="bl_work_desc">
+									TECHMEETSさんにいただいた画像カンプからコーディングしました。レスポンシブにも対応しています。
+								</p><!-- /.bl_work_desc -->
+								<ul class="bl_work_linkWrapper">
+									<li class="el_work_linkItem">
+										<a href="">
+											<i class="fab fa-github"></i>
+										</a>
+									</li><!-- /.el_work_linkItem -->
+									<li class="el_work_linkItem">
+										<a href="">
+											<i class="fas fa-external-link-alt"></i>
+										</a>
+									</li><!-- /.el_work_linkItem -->
+									<li class="el_work_linkItem">
+										<a href="">
+											<i class="fas fa-image"></i>
+										</a>
+									</li><!-- /.el_work_linkItem -->
+								</ul><!-- /.bl_work_linkWrapper -->
+							</div><!-- /.bl_work_info -->
+						</div><!-- /.-only -->
+						<figure class="bl_work_img ">
+							<img src="./images/works/02-takamina-link.jpg" alt="">
+						</figure><!-- /.bl_work_img -->
+					</div><!-- /.bl_work_inner -->
 				</li>
 
-				<li id="study-link02" class="bl_work_inner bl_work hp_shadow ">
-					<div class="bl_work_info ">
-						<div class="bl_work_title">
-							学習につかえるリンク集２
-						</div><!-- /.bl_work_title -->
-						<div class="bl_work_desc_wrapper">
-							<p class="bl_work_desc">
-								TECHMEETSさんにいただいた画像カンプからコーディングしました。レスポンシブにも対応しています。
-							</p><!-- /.bl_work_desc -->
-							<ul class="bl_work_linkWrapper">
-								<li class="el_work_linkItem">
-									<a href="">
-										<i class="fab fa-github"></i>
-									</a>
-								</li><!-- /.el_work_linkItem -->
-								<li class="el_work_linkItem">
-									<a href="">
-										<i class="fas fa-external-link-alt"></i>
-									</a>
-								</li><!-- /.el_work_linkItem -->
-								<li class="el_work_linkItem">
-									<a href="">
-										<i class="fas fa-image"></i>
-									</a>
-								</li><!-- /.el_work_linkItem -->
-							</ul><!-- /.bl_work_linkWrapper -->
-						</div><!-- /.bl_work_info -->
-					</div><!-- /.-only -->
-					<figure class="bl_work_img">
-						<img src="./images/works/03-takamina-link3.jpg" alt="">
-					</figure><!-- /.bl_work_img -->
+				<li id="study-link02" class="bl_work hp_shadow ">
+					<div class="bl_work_inner">
+						<div class="bl_work_info ">
+							<div class="bl_work_title">
+								学習につかえるリンク集２
+							</div><!-- /.bl_work_title -->
+							<div class="bl_work_desc_wrapper">
+								<p class="bl_work_desc">
+									TECHMEETSさんにいただいた画像カンプからコーディングしました。レスポンシブにも対応しています。
+								</p><!-- /.bl_work_desc -->
+								<ul class="bl_work_linkWrapper">
+									<li class="el_work_linkItem">
+										<a href="">
+											<i class="fab fa-github"></i>
+										</a>
+									</li><!-- /.el_work_linkItem -->
+									<li class="el_work_linkItem">
+										<a href="">
+											<i class="fas fa-external-link-alt"></i>
+										</a>
+									</li><!-- /.el_work_linkItem -->
+									<li class="el_work_linkItem">
+										<a href="">
+											<i class="fas fa-image"></i>
+										</a>
+									</li><!-- /.el_work_linkItem -->
+								</ul><!-- /.bl_work_linkWrapper -->
+							</div><!-- /.bl_work_info -->
+						</div><!-- /.-only -->
+						<figure class="bl_work_img">
+							<img src="./images/works/03-takamina-link3.jpg" alt="">
+						</figure><!-- /.bl_work_img -->
+					</div><!-- /.bl_work_inner -->
 				</li>
 
-				<li id="bochi"class="bl_work_inner bl_work hp_shadow ">
-					<div class="bl_work_info ">
-						<div class="bl_work_title">
-							ぼちぼちブログ
-						</div><!-- /.bl_work_title -->
-						<div class="bl_work_desc_wrapper">
-							<p class="bl_work_desc">
-								TECHMEETSさんにいただいた画像カンプからコーディングしました。レスポンシブにも対応しています。
-							</p><!-- /.bl_work_desc -->
-							<ul class="bl_work_linkWrapper">
-								<li class="el_work_linkItem">
-									<a href="">
-										<i class="fab fa-github"></i>
-									</a>
-								</li><!-- /.el_work_linkItem -->
-								<li class="el_work_linkItem">
-									<a href="">
-										<i class="fas fa-external-link-alt"></i>
-									</a>
-								</li><!-- /.el_work_linkItem -->
-								<li class="el_work_linkItem">
-									<a href="">
-										<i class="fas fa-image"></i>
-									</a>
-								</li><!-- /.el_work_linkItem -->
-							</ul><!-- /.bl_work_linkWrapper -->
-						</div><!-- /.bl_work_info -->
-					</div><!-- /.-only -->
-					<figure class="bl_work_img">
-						<img src="./images/works/04-bochi.jpg" alt="">
-					</figure><!-- /.bl_work_img -->
+				<li id="bochi" class="bl_work hp_shadow ">
+					<div class="bl_work_inner">
+						<div class="bl_work_info ">
+							<div class="bl_work_title">
+								ぼちぼちブログ
+							</div><!-- /.bl_work_title -->
+							<div class="bl_work_desc_wrapper">
+								<p class="bl_work_desc">
+									TECHMEETSさんにいただいた画像カンプからコーディングしました。レスポンシブにも対応しています。
+								</p><!-- /.bl_work_desc -->
+								<ul class="bl_work_linkWrapper">
+									<li class="el_work_linkItem">
+										<a href="">
+											<i class="fab fa-github"></i>
+										</a>
+									</li><!-- /.el_work_linkItem -->
+									<li class="el_work_linkItem">
+										<a href="">
+											<i class="fas fa-external-link-alt"></i>
+										</a>
+									</li><!-- /.el_work_linkItem -->
+									<li class="el_work_linkItem">
+										<a href="">
+											<i class="fas fa-image"></i>
+										</a>
+									</li><!-- /.el_work_linkItem -->
+								</ul><!-- /.bl_work_linkWrapper -->
+							</div><!-- /.bl_work_info -->
+						</div><!-- /.-only -->
+						<figure class="bl_work_img">
+							<img src="./images/works/04-bochi.jpg" alt="">
+						</figure><!-- /.bl_work_img -->
+					</div><!-- /.bl_work_inner -->
 				</li>
 
-				<li id="ytu" class="bl_work_inner bl_work hp_shadow">
-					<div class="bl_work_info">
-						<div class="bl_work_title">
-							八尾市教職員組合
-						</div><!-- /.bl_work_title -->
-						<div class="bl_work_desc_wrapper">
-							<p class="bl_work_desc">
-								TECHMEETSさんにいただいた画像カンプからコーディングしました。レスポンシブにも対応しています。
-							</p><!-- /.bl_work_desc -->
-							<ul class="bl_work_linkWrapper">
-								<li class="el_work_linkItem">
-									<a href="">
-										<i class="fab fa-github"></i>
-									</a>
-								</li><!-- /.el_work_linkItem -->
-								<li class="el_work_linkItem">
-									<a href="">
-										<i class="fas fa-external-link-alt"></i>
-									</a>
-								</li><!-- /.el_work_linkItem -->
-								<li class="el_work_linkItem">
-									<a href="">
-										<i class="fas fa-image"></i>
-									</a>
-								</li><!-- /.el_work_linkItem -->
-							</ul><!-- /.bl_work_linkWrapper -->
-						</div><!-- /.bl_work_info -->
-					</div><!-- /.-only -->
-					<figure class="bl_work_img">
-						<img src="./images/works/05-ytu.jpg" alt="">
-					</figure><!-- /.bl_work_img -->
+				<li id="ytu" class="bl_work hp_shadow">
+					<div class="bl_work_inner">
+						<div class="bl_work_info">
+							<div class="bl_work_title">
+								八尾市教職員組合
+							</div><!-- /.bl_work_title -->
+							<div class="bl_work_desc_wrapper">
+								<p class="bl_work_desc">
+									TECHMEETSさんにいただいた画像カンプからコーディングしました。レスポンシブにも対応しています。
+								</p><!-- /.bl_work_desc -->
+								<ul class="bl_work_linkWrapper">
+									<li class="el_work_linkItem">
+										<a href="">
+											<i class="fab fa-github"></i>
+										</a>
+									</li><!-- /.el_work_linkItem -->
+									<li class="el_work_linkItem">
+										<a href="">
+											<i class="fas fa-external-link-alt"></i>
+										</a>
+									</li><!-- /.el_work_linkItem -->
+									<li class="el_work_linkItem">
+										<a href="">
+											<i class="fas fa-image"></i>
+										</a>
+									</li><!-- /.el_work_linkItem -->
+								</ul><!-- /.bl_work_linkWrapper -->
+							</div><!-- /.bl_work_info -->
+						</div><!-- /.-only -->
+						<figure class="bl_work_img">
+							<img src="./images/works/05-ytu.jpg" alt="">
+						</figure><!-- /.bl_work_img -->
+					</div><!-- /.bl_work_inner -->
 				</li>
 
 
